fixing scroling on quotes page and text font size for apps on mobile

--- a/2d-personal-portfolio-website/src/index.css
+++ b/2d-personal-portfolio-website/src/index.css
@@ -73,9 +73,9 @@
     --desktop-icon-width: 64px;
     --desktop-icon-top-offset: 48px;
     --desktop-icon-gap: 100px;
-    --desktop-icon-font-size: 14px;
+    --desktop-icon-font-size: 16px;
     --desktop-right-offset-row-1: 6px;
-    --desktop-right-offset-row-2: 572px;
+    --desktop-right-offset-row-2: 570px;
     --dock-height: 50px;
     --dock-divider-height: 35px;
     --dock-icon-size: 48px;
